Fixed misaligned cta arrow on Safari.

--- a/apps/light/src/clients/gap/landingpage/video/styles/main.scss
+++ b/apps/light/src/clients/gap/landingpage/video/styles/main.scss
@@ -228,7 +228,6 @@ div.header {
         &:after {
             display: inline-block;
             width: 20px;
-            height: 8px;
             content: url('/static/light/gap/landingpage/video/images/down-arrow-black.png');
             padding-left: 10px;
         }
